--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "json-server server.json -w -d 500",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.8",
     "@stitches/react": "^1.2.8",
+    "axios": "^1.3.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "sort-by": "^1.2.0"
+    "scheduler": "^0.23.0",
+    "sort-by": "^1.2.0",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
@@ -24,6 +28,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.37.0",
+    "json-server": "^0.17.3",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
