--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@phosphor-icons/react": "^2.0.8",
+    "@radix-ui/react-radio-group": "^1.1.2",
     "@stitches/react": "^1.2.8",
     "axios": "^1.3.5",
     "imask": "^6.6.0-alpha.0",
